update: add responsiveness to the page

--- a/src/components/ExploreMenu/ExploreMenu.css
+++ b/src/components/ExploreMenu/ExploreMenu.css
@@ -55,3 +55,21 @@
   padding: 2px;
 }
 
+@media(max-width: 1050px){
+  .explore-menu-text {
+    max-width: 100%;
+    font-size: 14px;
+  }
+}
+
+@media(max-width: 900px){
+  .explore-menu .explore-menu-text {
+    max-width: 75%;
+  }
+}
+
+@media(max-width: 750px){
+  .explore-menu .explore-menu-text {
+    max-width: 100%;
+  }
+}
