--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -44,9 +44,21 @@
   margin-right: 15px;
 }
 
-.footer hr{
-    width: 100%;
-    height: 2px;margin: 20px 0px;
-    background-color: grey;
-    border: none;
+.footer hr {
+  width: 100%;
+  height: 2px;
+  margin: 20px 0px;
+  background-color: grey;
+  border: none;
+}
+
+@media (max-width: 750px) {
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+  }
+  .footer-copyright {
+    text-align: center;
+  }
 }
