--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -51,6 +51,10 @@
   position: relative;
 }
 
+.navbar-right img, .navbar-search-icon img {
+  width: 24px;
+}
+
 .navbar-search-icon .dot {
   position: absolute;
   min-width: 10px;
@@ -59,4 +63,61 @@
   border-radius: 5px;
   top: -8px;
   right: -8px;
+}
+
+@media (max-width: 1050px) {
+  .navbar .logo {
+    width: 140px;
+  }
+  .navbar-menu {
+    gap: 20px;
+    font-size: 17px;
+  }
+  .navbar-right {
+    gap: 30px;
+  }
+  .navbar-right img {
+    width: 22px;
+  }
+  .navbar-right button {
+    padding: 8px 20px;
+  }
+}
+
+@media (max-width: 900px) {
+  .navbar .logo {
+    width: 120px;
+  }
+  .navbar .navbar-menu {
+    gap: 15px;
+    font-size: 16px;
+  }
+  .navbar-right {
+    gap: 20px;
+  }
+  .navbar-right img {
+    width: 20px;
+  }
+  .navbar-right button {
+    padding: 7px 20px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 750px) {
+  .navbar .logo {
+    width: 90px;
+  }
+  .navbar .navbar-menu {
+    display: none;
+  }
+  .navbar .navbar-right {
+    gap: 14px;
+  }
+  .navbar-right button {
+    padding: 6px 14px;
+  }
+  .navbar-right img {
+    width: 14px;
+  }
 }
