--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: outfit;
+  /* overflow: hidden; */
 }
 body {
   min-height: 100vh;
@@ -21,10 +22,10 @@ a {
 }
 
 @keyframes fadeIn {
-  0%{
+  0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 1;
   }
 }
